# realesrgan_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: CMakeLists.txt
src/cpp/: realesrgan.cpp  realesrgan.h  wrapper.cpp
src/rust/: error.rs  lib.rs  models.rs  options.rs  realesrgan.rs
src/tests/: main.rs
tests/: test.rs
